--- a/idf/index.html
+++ b/idf/index.html
@@ -104,7 +104,7 @@
               <strong>Hao Xu</strong><sup>1,3</sup>,</span>
             </span>
             <span class="author-block">
-              <a href="https://fanzhaoxin666.github.io/">Zhaoxin Fan *</a><sup>1,3</sup>
+              <a href="https://fanzhaoxin666.github.io/">Zhaoxin Fan</a><sup>* 1,3</sup>
             </span>
           </div>
 
