--- a/idf/index.html
+++ b/idf/index.html
@@ -91,9 +91,9 @@
           <h1 class="title is-1 publication-title">Detailed Clothed Avatar Reconstruction from Implicit Distribution Fields</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <strong>Xueting Yang</strong><sup>1</sup>,</span>
+              <strong>Xueting Yang</strong><sup>†1</sup>,</span>
             <span class="author-block">
-              <strong>Yihao Luo</strong><sup>1</sup>,</span>
+              <strong>Yihao Luo</strong><sup>†1</sup>,</span>
             <span class="author-block">
               <a href="https://xiuyuliang.cn/">Yuliang Xiu</a><sup>2</sup>,
             </span>
@@ -104,7 +104,7 @@
               <strong>Hao Xu</strong><sup>1,3</sup>,</span>
             </span>
             <span class="author-block">
-              <a href="https://fanzhaoxin666.github.io/">Zhaoxin Fan*</a><sup>1,3</sup>
+              <a href="https://fanzhaoxin666.github.io/">Zhaoxin Fan</a><sup>*1,3</sup>
             </span>
           </div>
 
@@ -470,20 +470,20 @@
 </section>
 
 
-<section class="section" id="BibTeX">
+<!-- <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-      <!-- @article{park2021nerfies,
+      @article{park2021nerfies,
   author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
   title     = {Nerfies: Deformable Neural Radiance Fields},
   journal   = {ICCV},
   year      = {2021},
-} -->
+}
   </code></pre>
   </div>
 </section>
-
+ -->
 
 <footer class="footer">
   <div class="container">
