--- a/idf/index.html
+++ b/idf/index.html
@@ -177,7 +177,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="teaser" autoplay loop controls playsinline height="100%">
-        <source src="./static/videos/video.mp4"
+        <source src="./static/videos/newvideo.mp4"
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
