--- a/idf/index.html
+++ b/idf/index.html
@@ -261,7 +261,6 @@
              regressing the deterministic per-point implicit value. However, should all 
              the points, like near-surface and floating points, be treated equally? 
           </p>  
-
           <p>
              In this paper, we replace the <strong>implicit value</strong> with 
              adaptive <strong>uncertainty distribution</strong>, 
@@ -271,7 +270,7 @@
              Qualitative results show that the models, which are trained with our uncertainty 
             distribution loss, could recover more detailed wrinkles, and human-like limbs.
           </p>
-          <img src="./static/videos/8.png" alt="Italian Trulli">
+		    <img src="./static/videos/pic1.png" alt="Italian Trulli">
         </div>
       </div>
     </div>
@@ -285,7 +284,7 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">Method</h2>
         <div class="content has-text-justified">
-          <img src="./static/videos/1.png" alt="Italian Trulli">
+          <img src="./static/videos/DIF-pipeline.png" alt="Italian Trulli">
           <p>
             In this paper, we propose the novel neural implicit distribution fields to enhance the performance of 
             clothed human reconstruction. 
@@ -317,19 +316,6 @@
   </div>
 </section>
 
-<!-- <section class="section">
-  <div class="container is-max-desktop">
-    <!-- Abstract. -->
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">More Results</h2>
-        <div class="content has-text-justified">
-          <img src="./static/videos/app3.png" alt="Italian Trulli"> 
-        </div>
-      </div>
-    </div>
-  </div>
-</section> -->
 
 <!-- <section class="section">-->
   <div class="container is-max-desktop">
