--- a/idf/index.html
+++ b/idf/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="Detailed Clothed Avatar Reconstruction from Implicit Distribution Fields。">
+        content="D-IF: Uncertainty-aware Human Digitization via Implicit Distribution Field">
   <meta name="keywords" content="Implicit, Distribution, Avatar">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Detailed Clothed Avatar Reconstruction from Implicit Distribution Fields</title>
+  <title>D-IF: Uncertainty-aware Human Digitization via Implicit Distribution Field</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -52,7 +52,7 @@
   </div>
   <div class="navbar-menu">
     <div class="navbar-start" style="flex-grow: 1; justify-content: center;">
-      <a class="navbar-item" href="">
+      <a class="navbar-item" href="https://yxt7979.github.io/">
       <span class="icon">
           <i class="fas fa-home"></i>
       </span>
@@ -88,30 +88,31 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">Detailed Clothed Avatar Reconstruction from Implicit Distribution Fields</h1>
+          <h1 class="title is-1 publication-title">D-IF: Uncertainty-aware Human Digitization via Implicit Distribution Field</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <strong>Xueting Yang</strong><sup>†1</sup>,</span>
             <span class="author-block">
-              <strong>Yihao Luo</strong><sup>†1</sup>,</span>
+              <strong>Yihao Luo</strong><sup>†12</sup>,</span>
             <span class="author-block">
-              <a href="https://xiuyuliang.cn/">Yuliang Xiu</a><sup>2</sup>,
+              <a href="https://xiuyuliang.cn/">Yuliang Xiu</a><sup>3</sup>,
             </span>
             <span class="author-block">
               <strong>Wei Wang</strong><sup>1</sup>,</span>
             </span>
             <span class="author-block">
-              <strong>Hao Xu</strong><sup>1,3</sup>,</span>
+              <strong>Hao Xu</strong><sup>1,4</sup>,</span>
             </span>
             <span class="author-block">
-              <a href="https://fanzhaoxin666.github.io/">Zhaoxin Fan</a><sup>*1,3</sup>
+              <a href="https://fanzhaoxin666.github.io/">Zhaoxin Fan</a><sup>*1,4</sup>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Psyche AI Inc. ,</span>
-            <span class="author-block"><sup>2</sup>Max Planck Institute for Intelligent Systems,</span>
-            <span class="author-block"><sup>3</sup>HKUST</span>
+            <span class="author-block"><sup>2</sup>Imperial College London,</span>
+            <span class="author-block"><sup>3</sup>Max Planck Institute for Intelligent Systems,</span>
+            <span class="author-block"><sup>4</sup>HKUST</span>
           </div>
 
           <div class="column has-text-centered">
@@ -177,7 +178,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="teaser" autoplay loop controls playsinline height="100%">
-        <source src="./static/videos/newvideo.mp4"
+        <source src="./static/videos/DIFvideo.mp4"
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
@@ -270,7 +271,7 @@
              Qualitative results show that the models, which are trained with our uncertainty 
             distribution loss, could recover more detailed wrinkles, and human-like limbs.
           </p>
-		    <img src="./static/videos/pic1.png" alt="Italian Trulli">
+		    <img src="./static/videos/pic1.png" width="60%" alt="Italian Trulli">
         </div>
       </div>
     </div>
@@ -451,20 +452,21 @@
 </section>
 
 
-<!-- <section class="section" id="BibTeX">
+<section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-      @article{park2021nerfies,
+      comming soon
+      <!-- @article{park2021nerfies,
   author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
   title     = {Nerfies: Deformable Neural Radiance Fields},
   journal   = {ICCV},
   year      = {2021},
-}
+} -->
   </code></pre>
   </div>
 </section>
- -->
+
 
 <footer class="footer">
   <div class="container">
