--- a/idf/index.html
+++ b/idf/index.html
@@ -93,7 +93,7 @@
             <span class="author-block">
               <strong>Xueting Yang</strong><sup>†1</sup>,</span>
             <span class="author-block">
-              <strong>Yihao Luo</strong><sup>†12</sup>,</span>
+              <strong>Yihao Luo</strong><sup>†1,2</sup>,</span>
             <span class="author-block">
               <a href="https://xiuyuliang.cn/">Yuliang Xiu</a><sup>3</sup>,
             </span>
@@ -271,7 +271,10 @@
              Qualitative results show that the models, which are trained with our uncertainty 
             distribution loss, could recover more detailed wrinkles, and human-like limbs.
           </p>
-		    <img src="./static/videos/pic1.png" width="60%" alt="Italian Trulli">
+		    <!-- <img src="./static/videos/pic1.png" width="60%" alt="Italian Trulli"> -->
+        </div>
+        <div style="text-align:center;">
+          <img src="./static/videos/pic1.png" width="60%" alt="Italian Trulli">
         </div>
       </div>
     </div>
