--- a/idf/index.html
+++ b/idf/index.html
@@ -128,7 +128,7 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href=""
+                <a href="http://arxiv.org/abs/2308.08857"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
@@ -459,13 +459,12 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-      comming soon
-      <!-- @article{park2021nerfies,
-  author    = {Park, Keunhong and Sinha, Utkarsh and Barron, Jonathan T. and Bouaziz, Sofien and Goldman, Dan B and Seitz, Steven M. and Martin-Brualla, Ricardo},
-  title     = {Nerfies: Deformable Neural Radiance Fields},
+      @article{yang2023dif,
+  author    = {Xueting Yang and Yihao Luo and Yuliang Xiu and Wei Wang and Hao Xu and Zhaoxin Fan},
+  title     = {D-IF: Uncertainty-aware Human Digitization via Implicit Distribution Field},
   journal   = {ICCV},
-  year      = {2021},
-} -->
+  year      = {2023},
+}
   </code></pre>
   </div>
 </section>
