--- a/idf/index.html
+++ b/idf/index.html
@@ -459,10 +459,10 @@
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
     <pre><code>
-      @article{yang2023dif,
-  author    = {Xueting Yang and Yihao Luo and Yuliang Xiu and Wei Wang and Hao Xu and Zhaoxin Fan},
+@article{yang2023dif,
+  author    = {Xueting Yang, Yihao Luo, Yuliang Xiu, Wei Wang, Hao Xu and Zhaoxin Fan},
   title     = {D-IF: Uncertainty-aware Human Digitization via Implicit Distribution Field},
-  journal   = {ICCV},
+  journal   = {International Conference on Computer Vision 2023 (ICCV 2023)},
   year      = {2023},
 }
   </code></pre>
