--- a/README.html
+++ b/README.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>个人学术主页</title>
+  <title>邓珺礼的个人学术主页</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -49,7 +49,7 @@
 <body>
 
   <header>
-    <h1>张三的个人学术主页</h1>
+    <h1>邓珺礼的个人学术主页</h1>
     <p>中国传媒大学 博士生</p>
   </header>
 
@@ -61,28 +61,22 @@
 
   <section id="about">
     <h2>关于我</h2>
-    <p>我是中国传媒大学在读博士，研究 talking head 方向。</p>
-    <p>在我的研究中，我主要关注人机交互、计算机视觉和自然语言处理等领域的交叉点。</p>
+    <p>我是中国传媒大学在读博士，主要关注数字人 talking head 方向的研究。</p>
+    <p>欢迎访问我的<a href="https://scholar.google.com/citations?user=y1cRi1YAAAAJ&hl=zh-CN">Google Scholar 主页</a>了解更多关于我的学术成果。</p>
+    <p>此外，您也可以查看我的<a href="https://blog.csdn.net/weixin_39602024">CSDN 博客</a>。</p>
   </section>
 
-  <section id="publications">
-    <h2>论文</h2>
-    <ul>
-      <li>1. Zhang, S., et al. (2023). "Advancements in Talking Head Technology." Journal of Artificial Intelligence, 10(2), 123-135.</li>
-      <li>2. Wang, L., Zhang, S., & Liu, W. (2022). "Natural Language Processing Techniques for Dialogue Generation." Proceedings of the International Conference on Natural Language Processing, 45-56.</li>
-    </ul>
-  </section>
 
   <section id="contact">
     <h2>联系方式</h2>
-    <p>Email: zhangsan@example.com</p>
-    <p>电话：+86 1234567890</p>
-    <p>地址：中国传媒大学，北京市朝阳区</p>
+    <p>Email: dengjunliok@cuc.edu.cn</p>
+    <!-- 如果有其他联系方式，可以在此处添加 -->
   </section>
 
   <footer>
-    <p>&copy; 2024 张三. All Rights Reserved.</p>
+    <p>&copy; 2024 邓珺礼. All Rights Reserved.</p>
   </footer>
 
 </body>
 </html>
+
