--- a/idf/index.html
+++ b/idf/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="description"
-        content="D-IF: Uncertainty-aware Human Digitization via Implicit Distribution Field">
-  <meta name="keywords" content="Implicit, Distribution, Avatar">
+        content="LawDNet: Enhanced Audio-Driven Lip Synthesis via Local Affine Warping Deformation">
+  <meta name="keywords" content="Talking Head">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>D-IF: Uncertainty-aware Human Digitization via Implicit Distribution Field</title>
 
@@ -88,31 +88,33 @@
     <div class="container is-max-desktop">
       <div class="columns is-centered">
         <div class="column has-text-centered">
-          <h1 class="title is-1 publication-title">D-IF: Uncertainty-aware Human Digitization via Implicit Distribution Field</h1>
+          <h1 class="title is-1 publication-title">LawDNet: Enhanced Audio-Driven Lip Synthesis via Local Affine Warping Deformation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <strong>Xueting Yang</strong><sup>†1</sup>,</span>
+              <strong>Junli Deng</strong><sup>1</sup>,</span>
             <span class="author-block">
-              <strong>Yihao Luo</strong><sup>†1,2</sup>,</span>
-            <span class="author-block">
-              <a href="https://xiuyuliang.cn/">Yuliang Xiu</a><sup>3</sup>,
+              <strong>Yihao Luo</strong><sup>2</sup>,</span>
             </span>
             <span class="author-block">
-              <strong>Wei Wang</strong><sup>1</sup>,</span>
+              <strong>Xueting Yang</strong><sup>3</sup>,</span>
             </span>
             <span class="author-block">
-              <strong>Hao Xu</strong><sup>1,4</sup>,</span>
+              <strong>Siyou Li</strong><sup>4</sup>,</span>
             </span>
             <span class="author-block">
-              <a href="https://fanzhaoxin666.github.io/">Zhaoxin Fan</a><sup>*1,4</sup>
+              <strong>Wei Wang</strong><sup>5</sup>,</span>
+            </span>
+            <span class="author-block">
+              <strong>Ping Shi</strong><sup>1</sup>,</span>
             </span>
           </div>
 
           <div class="is-size-5 publication-authors">
-            <span class="author-block"><sup>1</sup>Psyche AI Inc. ,</span>
+            <span class="author-block"><sup>1</sup>Communication University of China,</span>
             <span class="author-block"><sup>2</sup>Imperial College London,</span>
-            <span class="author-block"><sup>3</sup>Max Planck Institute for Intelligent Systems,</span>
-            <span class="author-block"><sup>4</sup>HKUST</span>
+            <span class="author-block"><sup>3</sup>HKU,</span>
+            <span class="author-block"><sup>4</sup>Queen Mary University of London</span>
+            <span class="author-block"><sup>5</sup>Beijing University of Posts and Telecommunications</span>
           </div>
 
           <div class="column has-text-centered">
@@ -133,11 +135,11 @@
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv</span>
+                  <span>arXiv (comming soon)</span>
                 </a>
               </span>
               <!-- Video Link. -->
-              <span class="link-block">
+              <!-- <span class="link-block">
                 <a href=""
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
@@ -145,7 +147,7 @@
                   </span>
                   <span>Video</span>
                 </a>
-              </span>
+              </span> -->
               <!-- Code Link. -->
               <span class="link-block">
                 <a href="https://github.com/psyai-net/D-IF_release"
@@ -153,7 +155,7 @@
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code</span>
+                  <span>Code (comming soon)</span>
                   </a>
               </span>
               <!-- Dataset Link. -->
@@ -178,7 +180,7 @@
   <div class="container is-max-desktop">
     <div class="hero-body">
       <video id="teaser" autoplay loop controls playsinline height="100%">
-        <source src="./static/videos/DIFvideo.mp4"
+        <source src="./static/videos/LawDNet-video.mp4"
                 type="video/mp4">
       </video>
       <h2 class="subtitle has-text-centered">
@@ -255,21 +257,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Clothed human body reconstruction is an important but challenging task for
-             many applications, including augmented reality, virtual reality and metaverse. 
-             The use of deep implicit function sparks a new era of image-based 3D clothed human 
-             reconstruction. The vast majority of works locate the implicit surface by 
-             regressing the deterministic per-point implicit value. However, should all 
-             the points, like near-surface and floating points, be treated equally? 
-          </p>  
-          <p>
-             In this paper, we replace the <strong>implicit value</strong> with 
-             adaptive <strong>uncertainty distribution</strong>, 
-             to differentiate the points located at different distance fields. 
-             Such a simple ''value to distribution'' transition, finally 
-             leads to a significant improvement on almost all the baseline approaches. 
-             Qualitative results show that the models, which are trained with our uncertainty 
-            distribution loss, could recover more detailed wrinkles, and human-like limbs.
+            In the domain of photorealistic avatar generation, the fidelity of audio-driven lip motion synthesis is essential for realistic virtual interactions. Existing methods face two key challenges: a lack of vivacity due to limited diversity in generated lip poses and noticeable anamorphose motions caused by poor temporal coherence. To address these issues, we propose LawDNet, a novel deep-learning architecture enhancing lip synthesis through a Local Affine Warping Deformation mechanism. This mechanism models the intricate lip movements in response to the audio input by controllable non-linear warping fields. These fields consist of local affine transformations focused on abstract keypoints within deep feature maps, offering a novel universal paradigm for feature warping in networks. Additionally, LawDNet incorporates a dual-stream discriminator for improved frame-to-frame continuity and employs face normalization techniques to handle pose and scene variations. Extensive evaluations demonstrate LawDNet's superior robustness and lip movement dynamism performance compared to previous methods. The advancements presented in this paper, including the methodologies, training data, source codes, and pre-trained models, will be made accessible to the research community.
           </p>
 		    <!-- <img src="./static/videos/pic1.png" width="60%" alt="Italian Trulli"> -->
         </div>
