--- a/index.html
+++ b/index.html
@@ -6,43 +6,56 @@
   <title>邓珺礼的个人学术主页</title>
   <style>
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
       padding: 0;
+      background-color: #f0f0f0;
     }
     header {
-      background-color: #333;
+      background-color: #004d99;
       color: #fff;
       padding: 20px;
       text-align: center;
     }
-    h1 {
-      margin: 0;
+    header p {
+      font-size: 18px;
     }
     nav {
-      background-color: #f4f4f4;
+      background-color: #e6e6e6;
       padding: 10px;
       text-align: center;
     }
     nav a {
       text-decoration: none;
-      color: #333;
+      color: #0056b3;
       padding: 10px 20px;
+      border-radius: 5px;
+      transition: background-color 0.3s;
     }
     nav a:hover {
-      background-color: #ddd;
+      background-color: #ccd9ff;
     }
     section {
       padding: 20px;
+      background-color: #fff;
+      margin: 10px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
     footer {
-      background-color: #333;
+      background-color: #004d99;
       color: #fff;
       text-align: center;
       padding: 10px;
       position: fixed;
       bottom: 0;
       width: 100%;
+    }
+    a {
+      color: #0056b3;
+    }
+    a:hover {
+      text-decoration: underline;
     }
   </style>
 </head>
@@ -55,17 +68,16 @@
 
   <nav>
     <a href="#about">关于我</a>
-    <a href="#publications">论文</a>
     <a href="#contact">联系方式</a>
   </nav>
 
   <section id="about">
     <h2>关于我</h2>
     <p>我是中国传媒大学在读博士，主要关注数字人 talking head 方向的研究。</p>
+    <p>在我的研究中，我主要关注人机交互、计算机视觉和自然语言处理等领域的交叉点。</p>
     <p>欢迎访问我的<a href="https://scholar.google.com/citations?user=y1cRi1YAAAAJ&hl=zh-CN">Google Scholar 主页</a>了解更多关于我的学术成果。</p>
     <p>此外，您也可以查看我的<a href="https://blog.csdn.net/weixin_39602024">CSDN 博客</a>。</p>
   </section>
-
 
   <section id="contact">
     <h2>联系方式</h2>
@@ -79,4 +91,3 @@
 
 </body>
 </html>
-
