--- a/idf/index.html
+++ b/idf/index.html
@@ -6,7 +6,7 @@
         content="LawDNet: Enhanced Audio-Driven Lip Synthesis via Local Affine Warping Deformation">
   <meta name="keywords" content="Talking Head">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>D-IF: Uncertainty-aware Human Digitization via Implicit Distribution Field</title>
+  <title>LawDNet: Enhanced Audio-Driven Lip Synthesis via Local Affine Warping Deformation</title>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
