--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 
   <section id="about">
     <h2>关于我</h2>
-    <p>我是中国传媒大学在读博士，主要关注数字人 talking head 方向的研究。</p>
-    <p>在我的研究中，我主要关注人机交互、计算机视觉和自然语言处理等领域的交叉点。</p>
+    <p>我是中国传媒大学在读博士，主要关注2d/3d数字人, 2d/3d talking head 方向的研究。</p>
     <p>欢迎访问我的<a href="https://scholar.google.com/citations?user=y1cRi1YAAAAJ&hl=zh-CN">Google Scholar 主页</a>了解更多关于我的学术成果。</p>
     <p>此外，您也可以查看我的<a href="https://blog.csdn.net/weixin_39602024">CSDN 博客</a>。</p>
   </section>
