--- a/idf/index.html
+++ b/idf/index.html
@@ -96,7 +96,7 @@
             <span class="author-block">
               <strong>Junli Deng</strong><sup>1</sup>,</span>
             <span class="author-block">
-              <strong>Yihao Luo</strong><sup>2</sup>,</span>
+              <strong>Yihao Luo</strong><sup>*2</sup>,</span>
             </span>
             <span class="author-block">
               <strong>Xueting Yang</strong><sup>3</sup>,</span>
@@ -118,6 +118,7 @@
             <span class="author-block"><sup>3</sup>HKU,</span>
             <span class="author-block"><sup>4</sup>Queen Mary University of London</span>
             <span class="author-block"><sup>5</sup>Beijing University of Posts and Telecommunications</span>
+            <span class="author-block"><sup>*</sup>Corresponding Author</span>
           </div>
 
           <div class="column has-text-centered">
