--- a/idf/index.html
+++ b/idf/index.html
@@ -117,7 +117,7 @@
             <span class="author-block"><sup>2</sup>Imperial College London,</span>
             <span class="author-block"><sup>3</sup>HKU,</span>
             <span class="author-block"><sup>4</sup>Queen Mary University of London</span>
-            <span class="author-block"><sup>5</sup>Beijing University of Posts and Telecommunications</span>
+            <span class="author-block"><sup>5</sup>Beijing University of Posts and Telecommunications,</span>
             <span class="author-block"><sup>*</sup>Corresponding Author</span>
           </div>
 
