--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 
   <nav>
     <a href="#about">关于我</a>
+    <a href="#achievements">学术成果</a> <!-- 新增的导航链接 -->
     <a href="#contact">联系方式</a>
   </nav>
 
@@ -76,6 +77,16 @@
     <p>我是中国传媒大学在读博士，主要关注2d/3d数字人, 2d/3d talking head 方向的研究。</p>
     <p>欢迎访问我的<a href="https://scholar.google.com/citations?user=y1cRi1YAAAAJ&hl=zh-CN">Google Scholar 主页</a>了解更多关于我的学术成果。</p>
     <p>此外，您也可以查看我的<a href="https://blog.csdn.net/weixin_39602024">CSDN 博客</a>。</p>
+  </section>
+
+  <!-- 新增的学术成果（Achievements）板块 -->
+  <section id="achievements">
+    <h2>学术成果</h2>
+    <p>我在数字人和 talking head 的研究方向上取得了以下成果：</p>
+    <ul>
+      <li><a href="https://cucdengjunli.github.io/idf/">LawDNet</a></li>
+      <!-- 您可以继续添加更多成果列表项 -->
+    </ul>
   </section>
 
   <section id="contact">
