--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
+      margin-bottom: 80px; /* 假设 footer 高度为 50px，这里加了一些额外的空间 */
       padding: 0;
       background-color: #f0f0f0;
     }
@@ -98,6 +99,7 @@
   <footer>
     <p>&copy; 2024 邓珺礼. All Rights Reserved.</p>
   </footer>
+  
 
 </body>
 </html>
