--- a/idf/index.html
+++ b/idf/index.html
@@ -182,7 +182,7 @@
 
 <div class="container has-text-centered" style="max-width: 50%; margin: auto;">
   <p class="has-text-centered">
-    We will release our paper and code upon acceptance. We extend our gratitude to <strong>Wei Wang</strong> for assisting us in data collection. Special thanks to <strong>Qipei Li</strong> and <strong>Qirong Liang</strong> for reviewing the format of our manuscript.
+    We will release our paper and code upon acceptance. We extend our gratitude to <strong>Hao Wang</strong> for assisting us in data collection. Special thanks to <strong>Qipei Li</strong> and <strong>Qirong Liang</strong> for reviewing the format of our manuscript.
   </p>
 </div>
 
