--- a/idf/index.html
+++ b/idf/index.html
@@ -95,8 +95,8 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block">
               <strong>Junli Deng</strong><sup>1</sup>,</span>
-            <span class="author-block">
-              <strong>Yihao Luo</strong><sup>*2</sup>,</span>
+              <span class="author-block">
+                <a href="https://github.com/Luo-Yihao" target="_blank" class="author-link"><strong>Yihao Luo</strong><sup>*2</sup></a>,</span>
             </span>
             <span class="author-block">
               <strong>Xueting Yang</strong><sup>3</sup>,</span>
@@ -134,7 +134,7 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href="http://arxiv.org/abs/2308.08857"
+                <a href=" https://cucdengjunli.github.io/idf/"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
