--- a/idf/index.html
+++ b/idf/index.html
@@ -94,7 +94,7 @@
           <h1 class="title is-1 publication-title">LawDNet: Enhanced Audio-Driven Lip Synthesis via Local Affine Warping Deformation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <strong>Junli Deng</strong><sup>1</sup>,</span>
+                <a href="https://github.com/cucdengjunli" target="_blank" class="author-link"><strong>Junli Deng</strong><sup>1</sup></a>,</span>
               <span class="author-block">
                 <a href="https://github.com/Luo-Yihao" target="_blank" class="author-link"><strong>Yihao Luo</strong><sup>*2</sup></a>,</span>
             </span>
