--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
+  <meta name="google-site-verification" content="OMhs5yieGvFXvfqKEGglmujMDxHxudo5C57w4CWvNQQ" />
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>邓珺礼的个人学术主页</title>
