修改主页,添加郭老师

--- a/idf/index.html
+++ b/idf/index.html
@@ -95,9 +95,9 @@
           <h1 class="title is-1 publication-title">LawDNet: Enhanced Audio-Driven Lip Synthesis via Local Affine Warping Deformation</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-                <a href="https://github.com/cucdengjunli" target="_blank" class="author-link"><strong>Junli Deng</strong><sup>1</sup></a>,</span>
-              <span class="author-block">
-                <a href="https://github.com/Luo-Yihao" target="_blank" class="author-link"><strong>Yihao Luo</strong><sup>*2</sup></a>,</span>
+              <a href="https://github.com/cucdengjunli" target="_blank" class="author-link"><strong>Junli Deng</strong><sup>1</sup></a>,</span>
+            <span class="author-block">
+              <a href="https://github.com/Luo-Yihao" target="_blank" class="author-link"><strong>Yihao Luo</strong><sup>*2</sup></a>,</span>
             </span>
             <span class="author-block">
               <strong>Xueting Yang</strong><sup>3</sup>,</span>
@@ -109,16 +109,20 @@
               <strong>Wei Wang</strong><sup>5</sup>,</span>
             </span>
             <span class="author-block">
+              <a href="https://jinyangguo.github.io/" target="_blank" class="author-link"><strong>Jinyang Guo</strong><sup>6</sup></a>,</span>
+            </span>
+            <span class="author-block">
               <strong>Ping Shi</strong><sup>1</sup>,</span>
             </span>
           </div>
-
+          
           <div class="is-size-5 publication-authors">
             <span class="author-block"><sup>1</sup>Communication University of China,</span>
             <span class="author-block"><sup>2</sup>Imperial College London,</span>
             <span class="author-block"><sup>3</sup>HKU,</span>
             <span class="author-block"><sup>4</sup>Queen Mary University of London</span>
             <span class="author-block"><sup>5</sup>Beijing University of Posts and Telecommunications,</span>
+            <span class="author-block"><sup>6</sup>Beihang University, Beijing, China,</span>
             <span class="author-block"><sup>*</sup>Corresponding Author</span>
           </div>
 
@@ -155,13 +159,13 @@
               </span> -->
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://cucdengjunli.github.io/idf/"
+                <a href="https://github.com/iPaw-AI-LAB/LawDNet_2024"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Code (coming soon)</span>
-                  </a>
+                  <span>Code</span>
+                </a>
               </span>
               <!-- Dataset Link. -->
               <!-- <span class="link-block">
