--- a/lawdnet/index.html
+++ b/lawdnet/index.html
@@ -96,7 +96,7 @@
           <div class="is-size-5 publication-authors">
             <span class="author-block">
                 <a href="https://github.com/cucdengjunli" target="_blank" class="author-link"><strong>Junli Deng</strong><sup>1</sup></a>,</span>
-              <span class="author-block">
+            <span class="author-block">
                 <a href="https://github.com/Luo-Yihao" target="_blank" class="author-link"><strong>Yihao Luo</strong><sup>*2</sup></a>,</span>
             </span>
             <span class="author-block">
@@ -109,6 +109,9 @@
               <strong>Wei Wang</strong><sup>5</sup>,</span>
             </span>
             <span class="author-block">
+              <strong>Jinyang Guo</strong><sup>6</sup>,</span>
+            </span>
+            <span class="author-block">
               <strong>Ping Shi</strong><sup>1</sup>,</span>
             </span>
           </div>
@@ -119,6 +122,7 @@
             <span class="author-block"><sup>3</sup>HKU,</span>
             <span class="author-block"><sup>4</sup>Queen Mary University of London</span>
             <span class="author-block"><sup>5</sup>Beijing University of Posts and Telecommunications,</span>
+            <span class="author-block"><sup>6</sup>Beihang University, Beijing, China,</span>
             <span class="author-block"><sup>*</sup>Corresponding Author</span>
           </div>
 
