--- a/index.html
+++ b/index.html
@@ -5,59 +5,115 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>邓珺礼的个人学术主页</title>
+  <!-- 引入Google字体 -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+SC:wght@400;700&display=swap" rel="stylesheet">
+  <!-- 自定义样式 -->
   <style>
     body {
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      font-family: 'Noto Sans SC', sans-serif;
       margin: 0;
-      margin-bottom: 80px; /* 假设 footer 高度为 50px，这里加了一些额外的空间 */
       padding: 0;
-      background-color: #f0f0f0;
+      background-color: #f7f7f7;
+      color: #333;
     }
     header {
-      background-color: #004d99;
+      background: linear-gradient(135deg, #0066cc, #003366);
       color: #fff;
-      padding: 20px;
+      padding: 60px 20px;
       text-align: center;
+      clip-path: polygon(0 0, 100% 0, 100% 85%, 0 100%);
+    }
+    header h1 {
+      font-size: 48px;
+      margin: 0;
     }
     header p {
-      font-size: 18px;
+      font-size: 24px;
+      margin-top: 10px;
     }
     nav {
-      background-color: #e6e6e6;
+      background-color: #fff;
       padding: 10px;
       text-align: center;
+      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
     }
     nav a {
       text-decoration: none;
-      color: #0056b3;
+      color: #0066cc;
       padding: 10px 20px;
-      border-radius: 5px;
-      transition: background-color 0.3s;
+      margin: 0 10px;
+      font-weight: 700;
+      transition: color 0.3s, background-color 0.3s;
     }
     nav a:hover {
-      background-color: #ccd9ff;
+      color: #fff;
+      background-color: #0066cc;
+      border-radius: 5px;
     }
     section {
-      padding: 20px;
+      padding: 60px 20px;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    section h2 {
+      font-size: 32px;
+      border-left: 5px solid #0066cc;
+      padding-left: 15px;
+      margin-bottom: 30px;
+    }
+    section p, section li {
+      font-size: 18px;
+      line-height: 1.6;
+    }
+    section ul {
+      list-style: none;
+      padding: 0;
+    }
+    section ul li {
       background-color: #fff;
-      margin: 10px;
+      margin-bottom: 15px;
+      padding: 15px;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
+    }
+    section ul li a {
+      text-decoration: none;
+      color: #0066cc;
+      font-weight: 700;
     }
     footer {
-      background-color: #004d99;
+      background-color: #003366;
       color: #fff;
       text-align: center;
-      padding: 10px;
-      position: fixed;
-      bottom: 0;
-      width: 100%;
+      padding: 20px;
+      margin-top: 60px;
     }
-    a {
-      color: #0056b3;
+    footer p {
+      margin: 5px 0;
     }
-    a:hover {
-      text-decoration: underline;
+    /* 响应式设计 */
+    @media (max-width: 768px) {
+      header h1 {
+        font-size: 36px;
+      }
+      header p {
+        font-size: 18px;
+      }
+      nav a {
+        padding: 8px 16px;
+        margin: 0 5px;
+      }
+      section h2 {
+        font-size: 28px;
+      }
+      section p, section li {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
@@ -70,21 +126,20 @@
 
   <nav>
     <a href="#about">关于我</a>
-    <a href="#achievements">学术成果</a> <!-- 新增的导航链接 -->
+    <a href="#achievements">学术成果</a>
     <a href="#contact">联系方式</a>
   </nav>
 
   <section id="about">
     <h2>关于我</h2>
-    <p>我是中国传媒大学在读博士，主要关注2d/3d数字人, 2d/3d talking head 方向的研究。</p>
+    <p>我是中国传媒大学在读博士，主要关注2D/3D数字人和2D/3D Talking Head方向的研究。</p>
     <p>欢迎访问我的<a href="https://scholar.google.com/citations?user=y1cRi1YAAAAJ&hl=zh-CN">Google Scholar 主页</a>了解更多关于我的学术成果。</p>
-    <p>此外，您也可以查看我的<a href="https://blog.csdn.net/weixin_39602024">CSDN 博客</a>。</p>
+    <p>此外，您也可以查看我的<a href="https://blog.csdn.net/weixin_39602024">CSDN 博客</a>和<a href="https://github.com/cucdengjunli">GitHub 主页</a>。</p>
   </section>
 
-  <!-- 新增的学术成果（Achievements）板块 -->
   <section id="achievements">
     <h2>学术成果</h2>
-    <p>我在数字人和 talking head 的研究方向上取得了以下成果：</p>
+    <p>我在数字人和Talking Head的研究方向上取得了以下成果：</p>
     <ul>
       <li><a href="https://cucdengjunli.github.io/idf/">LawDNet</a></li>
       <!-- 您可以继续添加更多成果列表项 -->
@@ -93,12 +148,13 @@
 
   <section id="contact">
     <h2>联系方式</h2>
-    <p>Email: dengjunliok@cuc.edu.cn</p>
+    <p>Email: <a href="mailto:dengjunliok@cuc.edu.cn">dengjunliok@cuc.edu.cn</a></p>
     <!-- 如果有其他联系方式，可以在此处添加 -->
   </section>
 
   <footer>
-    <p>&copy; 2024 邓珺礼. All Rights Reserved.</p>
+    <p>&copy; 2024 邓珺礼. 保留所有权利。</p>
+    <p>感谢您的访问！</p>
   </footer>
   
 
