--- a/idf/index.html
+++ b/idf/index.html
@@ -109,7 +109,7 @@
               <strong>Wei Wang</strong><sup>5</sup>,</span>
             </span>
             <span class="author-block">
-              <a href="https://jinyangguo.github.io/" target="_blank" class="author-link"><strong>Jinyang Guo</strong><sup>6</sup></a>,</span>
+              <strong>Jinyang Guo</strong><sup>6</sup>,</span>
             </span>
             <span class="author-block">
               <strong>Ping Shi</strong><sup>1</sup>,</span>
@@ -275,10 +275,7 @@
           <p>
             In the domain of photorealistic avatar generation, the fidelity of audio-driven lip motion synthesis is essential for realistic virtual interactions. Existing methods face two key challenges: a lack of vivacity due to limited diversity in generated lip poses and noticeable anamorphose motions caused by poor temporal coherence. To address these issues, we propose LawDNet, a novel deep-learning architecture enhancing lip synthesis through a Local Affine Warping Deformation mechanism. This mechanism models the intricate lip movements in response to the audio input by controllable non-linear warping fields. These fields consist of local affine transformations focused on abstract keypoints within deep feature maps, offering a novel universal paradigm for feature warping in networks. Additionally, LawDNet incorporates a dual-stream discriminator for improved frame-to-frame continuity and employs face normalization techniques to handle pose and scene variations. Extensive evaluations demonstrate LawDNet's superior robustness and lip movement dynamism performance compared to previous methods. The advancements presented in this paper, including the methodologies, training data, source codes, and pre-trained models, will be made accessible to the research community.
           </p>
-		    <!-- <img src="./static/videos/pic1.png" width="60%" alt="Italian Trulli"> -->
-        </div>
-        <div style="text-align:center;">
-          <img src="./static/videos/lawdnet-任务示意图(2).png" width="100%" alt="Italian Trulli">
+		    <img src="./static/videos/lawdnet-示意图-rebuttal.jpg" width="100%" alt="LawDNet示意图">
         </div>
       </div>
     </div>
