--- a/idf/index.html
+++ b/idf/index.html
@@ -139,12 +139,12 @@
                 </a>
               </span> -->
               <span class="link-block">
-                <a href=" https://cucdengjunli.github.io/idf/"
+                <a href="https://arxiv.org/abs/2409.09326"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="ai ai-arxiv"></i>
                   </span>
-                  <span>arXiv (coming soon)</span>
+                  <span>arXiv</span>
                 </a>
               </span>
               <!-- Video Link. -->
