--- a/idf/index.html
+++ b/idf/index.html
@@ -94,26 +94,30 @@
         <div class="column has-text-centered">
           <h1 class="title is-1 publication-title">LawDNet: Enhanced Audio-Driven Lip Synthesis via Local Affine Warping Deformation</h1>
           <div class="is-size-5 publication-authors">
-            <span class="author-block">
-              <a href="https://github.com/cucdengjunli" target="_blank" class="author-link"><strong>Junli Deng</strong><sup>1</sup></a>,</span>
-            <span class="author-block">
-              <a href="https://github.com/Luo-Yihao" target="_blank" class="author-link"><strong>Yihao Luo</strong><sup>*2</sup></a>,</span>
-            </span>
-            <span class="author-block">
-              <strong>Xueting Yang</strong><sup>3</sup>,</span>
-            </span>
-            <span class="author-block">
-              <strong>Siyou Li</strong><sup>4</sup>,</span>
-            </span>
-            <span class="author-block">
-              <strong>Wei Wang</strong><sup>5</sup>,</span>
-            </span>
-            <span class="author-block">
-              <strong>Jinyang Guo</strong><sup>6</sup>,</span>
-            </span>
-            <span class="author-block">
-              <strong>Ping Shi</strong><sup>1</sup>,</span>
-            </span>
+		<span class="author-block">
+		  <a href="https://github.com/cucdengjunli" target="_blank" class="author-link"><strong>Junli Deng</strong><sup>1*</sup></a>,
+		</span>
+		<span class="author-block">
+		  <a href="https://github.com/Luo-Yihao" target="_blank" class="author-link"><strong>Yihao Luo</strong><sup>*2</sup></a>,
+		</span>
+		<span class="author-block">
+		  <strong>Xueting Yang</strong><sup>3</sup>,</span>
+		</span>
+		<span class="author-block">
+		  <strong>Siyou Li</strong><sup>4</sup>,</span>
+		</span>
+		<span class="author-block">
+		  <strong>Wei Wang</strong><sup>5</sup>,</span>
+		</span>
+		<span class="author-block">
+		  <a href="https://jinyangguo.github.io/" target="_blank" class="author-link"><strong>Jinyang Guo</strong><sup>6</sup></a>,
+		</span>
+		<span class="author-block">
+		  <strong>Ping Shi</strong><sup>1</sup>,</span>
+		</span>
+		<div style="margin-top: 10px;">
+		  <sup>*</sup> Equal contribution
+		</div>
           </div>
           
           <div class="is-size-5 publication-authors">
