--- a/idf/index.html
+++ b/idf/index.html
@@ -95,10 +95,10 @@
           <h1 class="title is-1 publication-title">LawDNet: Enhanced Audio-Driven Lip Synthesis via Local Affine Warping Deformation</h1>
           <div class="is-size-5 publication-authors">
 		<span class="author-block">
-		  <a href="https://github.com/cucdengjunli" target="_blank" class="author-link"><strong>Junli Deng</strong><sup>1*</sup></a>,
+		  <a href="https://github.com/cucdengjunli" target="_blank" class="author-link"><strong>Junli Deng</strong><sup>1†</sup></a>,
 		</span>
 		<span class="author-block">
-		  <a href="https://github.com/Luo-Yihao" target="_blank" class="author-link"><strong>Yihao Luo</strong><sup>*2</sup></a>,
+		  <a href="https://github.com/Luo-Yihao" target="_blank" class="author-link"><strong>Yihao Luo</strong><sup>2†*</sup></a>,
 		</span>
 		<span class="author-block">
 		  <strong>Xueting Yang</strong><sup>3</sup>,</span>
@@ -115,9 +115,7 @@
 		<span class="author-block">
 		  <strong>Ping Shi</strong><sup>1</sup>,</span>
 		</span>
-		<div style="margin-top: 10px;">
-		  <sup>*</sup> Equal contribution
-		</div>
+
           </div>
           
           <div class="is-size-5 publication-authors">
@@ -128,6 +126,7 @@
             <span class="author-block"><sup>5</sup>Beijing University of Posts and Telecommunications,</span>
             <span class="author-block"><sup>6</sup>Beihang University, Beijing, China,</span>
             <span class="author-block"><sup>*</sup>Corresponding Author</span>
+	    <span class="author-block"><sup>†</sup>Equal contribution</span>
           </div>
 
           <div class="column has-text-centered">
