--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
     <ul>
       <li><a href="https://cucdengjunli.github.io/idf/">LawDNet</a></li>
       <!-- 您可以继续添加更多成果列表项 -->
+      <li><a href="https://cucdengjunli.github.io/wgs/">WGS</a></li>
     </ul>
   </section>
 
