--- a/wgs/index.html
+++ b/wgs/index.html
@@ -49,10 +49,10 @@
           <h1 class="title is-1 publication-title">WGS: Wasserstein Gaussian Splatting for Dynamic Scene Rendering</h1>
           <div class="is-size-5 publication-authors">
             <span class="author-block">
-              <a href="https://github.com/cucdengjunli" target="_blank" class="author-link"><strong>Junli Deng</strong><sup>2*</sup></a>,
+              <a href="https://github.com/cucdengjunli" target="_blank" class="author-link"><strong>Junli Deng</strong><sup>1*</sup></a>,
             </span>
             <span class="author-block">
-              <a href="https://github.com/Luo-Yihao" target="_blank" class="author-link"><strong>Yihao Luo</strong><sup>1*</sup></a>
+              <a href="https://github.com/Luo-Yihao" target="_blank" class="author-link"><strong>Yihao Luo</strong><sup>2*†</sup></a>
             </span>
           </div>
           
@@ -60,6 +60,7 @@
             <span class="author-block"><sup>1</sup>Communication University of China,</span>
             <span class="author-block"><sup>2</sup>Imperial College London</span>
             <span class="author-block"><sup>*</sup>Equal Contribution</span>
+            <span class="author-block"><sup>†</sup>Corresponding Author</span>
           </div>
 
           <div class="column has-text-centered">
@@ -146,14 +147,14 @@
     <h2 class="title is-3 has-text-centered">Demonstration Videos</h2>
     <div class="columns is-multiline">
       <div class="column is-half">
-        <video controls playsinline style="width: 100%;">
+        <video controls autoplay loop muted playsinline style="width: 100%;">
           <source src="./videos/dynerf-demo_video.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
         <p class="has-text-centered">dynerf</p>
       </div>
       <div class="column is-half">
-        <video controls playsinline style="width: 100%;">
+        <video controls autoplay loop muted playsinline style="width: 100%;">
           <source src="./videos/d-nerf_demo_video.mp4" type="video/mp4">
           Your browser does not support the video tag.
         </video>
